fix whitespace in description

--- a/css/sass/_layout.scss
+++ b/css/sass/_layout.scss
@@ -3,7 +3,6 @@
   margin: 8rem auto;
   background-color: var(--light-grey-2);
   box-shadow: var(--dark-shadow);
-  min-height: 80rem;
 }
 
 .header {
@@ -49,6 +48,10 @@
   padding: 3rem;
   flex: 0 0 60%;
   margin-right: 4.5rem;
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .user-reviews {
